Fix disappearing header on mobile, handle bg image on about section

--- a/src/sections/about/about.module.scss
+++ b/src/sections/about/about.module.scss
@@ -35,35 +35,35 @@
     background-position: center;
     border-radius: 50%;
     overflow: hidden;
-    
+
     > img {
       max-height: 100%;
+      width: 100%;
     }
-    
+
     &-wrapper {
       position: relative;
-      
-      @include breakpoint('lg') {
-        flex: 0 0 auto;
-  
-        &:before {
-          content: '';
-          display: block;
-          width: 30rem;
-          height: 30rem;
-          background-image: url('@/assets/sypialnia2.webp');
-          background-size: cover;
-          background-position: center;
-          border-radius: 50%;
-          position: absolute;
-          top: 20%;
-          left: 20%;
-          z-index: -1;
-        }
-      }
     }
+  }
+  .bg-image {
+    display: none;
 
-
+    @include breakpoint('lg') {
+      display: flex;
+      flex: 0 0 auto;
+      width: 30rem;
+      height: 30rem;
+      border-radius: 50%;
+      position: absolute;
+      top: 20%;
+      left: 20%;
+      z-index: -1;
+      overflow: hidden;
+    }
+    > img {
+      max-width: 100%;
+      height: 100%;
+    }
   }
 
   .text {
